# beam_report_SLS

./: .gitignore  README.md  gain_analysis_report.txt  pyproject.toml  sionna_sls_beam_management_platform_v4.md  修改说明v2.4.md  更新说明v2.10.md  更新说明v2.11.md  更新说明v2.5.md  更新说明v2.6.md  更新说明v2.7.md  更新说明v2.8.md  更新说明v2.9.md
beam_sls/: __init__.py  channel.py  codebook.py  config.py  coverage.py  evaluation.py  feedback.py  link.py  link_adaptation.py  mcs.py  measurement.py  plotting.py  rf.py  run.py  scheduler.py  sim.py  topology.py  utils.py
configs/: cdf_evaluation_cases_example.yaml  cdf_plot_example.yaml  phase1_single_cell.yaml  v2_7_three_site_global_18ue_distance_range_v4_5ue_eval_matrix.yaml  v2_one_site_three_sector.yaml  v2_one_site_three_sector_sionna_strict.yaml  v2_seven_site_hex.yaml  v2_three_site_global_36ue.yaml  v2_three_site_global_36ue_fixed_v8_5ue_eval_matrix.yaml  v2_three_site_triangle.yaml  v_2_10_2TXRU_3sites_global.yaml
docs/: gain_space_analysis_report.md  implementation_notes.md  mcs_tti_diagnostic.md  yaml_parameter_reference.md
scripts/: analyze_gain.py  check_env.py  check_gamma_gpu_env.py  plot_cdf.py  run_quick_demo.sh  verify_scheduler_findings.py
tests/: test_array_config.py  test_evaluation.py  test_plot_cdf.py  test_scheduler_v210.py  test_sionna_link_adapter.py  test_smoke.py
