[project]
name = "sionna-sls-beam-mgmt-v2-4"
version = "0.2.4"
description = "Phase-1 beam-domain SLS prototype for UE beam-interference feedback and MU-MIMO scheduling studies"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "matplotlib>=3.5",
]

[project.optional-dependencies]
# Install the CuPy wheel matching the server CUDA major version. This extra is
# the common CUDA 12.x case; CUDA 13.x users should select gpu-cuda13.
gpu = ["cupy-cuda12x>=13.0"]
gpu-cuda13 = ["cupy-cuda13x>=14.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
